feat: setup calendar schedule notifications
